desenvolvido o botao do whatsapp

--- a/src/Assets/scss/components/_button.scss
+++ b/src/Assets/scss/components/_button.scss
@@ -567,3 +567,20 @@
     }
   }
 }
+
+.whatsappButton {
+    img {
+      width: 40px !important;
+      height: 40px !important;
+      margin: 0 auto;
+
+    }
+
+    footer {
+        button {
+           svg {
+                margin-left: .75rem;
+           } 
+        }
+    }
+}
