--- a/src/Assets/scss/components/_counter.scss
+++ b/src/Assets/scss/components/_counter.scss
@@ -92,6 +92,9 @@
 		vertical-align: middle;
 		font-size: 2.85rem;
 		line-height: 3.4rem;
+		display: flex;
+		align-items: center;
+		justify-content: center;
 	}
 
 	.counter-content-section {
