--- a/src/Assets/scss/components/_counter.scss
+++ b/src/Assets/scss/components/_counter.scss
@@ -16,7 +16,7 @@
 	}
 
 	.counter-content {
-		@apply block mb-0 w-[80%] text-[#828282] md:w-full;
+		@apply block mb-0 text-[#828282] md:w-full;
 		foo: bar;
 	}
 }
@@ -59,6 +59,11 @@
 		foo: bar;
 	}
 
+	.postfix_sign {
+		@apply font-serif font-medium text-[30px] sm:text-[20px] xs:text-[20px];
+		color: var(--base-color, #0038e3);
+	}
+
 	.counter-numbers {
 		@apply font-serif font-semibold text-[54.6px] -mb-[5px] leading-[67px] lg:text-[50.7px] md:text-[46.8px] sm:text-[43px];
 		foo: bar;
@@ -67,6 +72,7 @@
 	.counter-heading {
 		@apply font-serif uppercase block tracking-[1px] xs:leading-[1];
 		color: #828282;
+		font-weight: 500;
 	}
 }
 
