ajustado layout das funcionalidades da pagina do integrador

--- a/src/Assets/scss/core/_reset.scss
+++ b/src/Assets/scss/core/_reset.scss
@@ -359,6 +359,11 @@ textarea {
   --swiper-pagination-color: #ffffff;
 }
 
+.swiper-pagination-lightPro {
+  --swiper-pagination-color: #858585;
+  padding-bottom: 80px;
+}
+
 .swiper-pagination-dark {
   --swiper-pagination-color: #232323;
 }
