--- a/src/Assets/scss/components/_iconwithtext.scss
+++ b/src/Assets/scss/components/_iconwithtext.scss
@@ -160,13 +160,14 @@
 //Icon With Text Style 06
 .icon-with-text-06 {
   > div {
-    border: 1px solid #e4e4e4;
-    padding: 3rem;
+    background-color: white;
+    padding: 1.6rem;
     border-radius: 6px;
     text-align: center;
     justify-content: center;
     align-items: center;
     transition-duration: 0.4s;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.08);
 
     .feature-box-content {
       > span {
@@ -175,42 +176,12 @@
       }
       .title {
         color: #232323;
+        font-size: 14px;
       }
     }
     .icon-text {
       @apply text-[40px] mb-5;
       transition-duration: 0.4s;
-    }
-
-    &:hover {
-      border-color: transparent;
-      background-color: white;
-      box-shadow: 0 0 15px rgba(0, 0, 0, 0.08);
-
-      i {
-        transform: translateY(-10px);
-      }
-
-      a {
-        opacity: 1;
-        transform: translateY(-6px);
-      }
-
-      .icon-text {
-        transform: translateY(-10px);
-      }
-
-      .feature-box-content {
-        transform: translateY(-10px);
-
-        > span {
-          @apply block mb-[10px];
-          foo: bar;
-        }
-        .title {
-          color: #232323;
-        }
-      }
     }
   }
 
@@ -235,6 +206,14 @@
     transform: translateY(20px);
     transition-duration: 0.4s;
     margin-bottom: 15px;
+
+    p {
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      font-size: 12px;
+    }
   }
 }
 
