ajustes na pagina do integrador

--- a/src/Assets/scss/core/_classes.scss
+++ b/src/Assets/scss/core/_classes.scss
@@ -448,3 +448,15 @@
     }
   }
 }
+
+.txt-14px {
+  font-size: 14px !important;
+}
+
+.txt-16px {
+  font-size: 16px !important;
+}
+
+.btnVideoIntegrador {
+  background: linear-gradient(to right top, #014385, #2387c8, #2387c8, #2387c8, #0554a3);
+}
