--- a/src/Assets/scss/components/_tab.scss
+++ b/src/Assets/scss/components/_tab.scss
@@ -313,3 +313,59 @@
     }
   }
 }
+
+.tabPorqueEscolher {
+  gap: 1rem;
+
+  .nav-item {
+    .nav-link {
+      padding: 0;
+  
+      .tab-number {
+        font-size: 48px;
+        font-weight: 500;
+        line-height: 4rem;
+        color: #c9c9c9;
+        font-weight: 400;
+      }
+
+      .tab-text {
+        display: flex;
+        align-items: center;
+        text-align: start;
+        max-width: 125px;
+        margin-left: 1rem;
+        color: #c9c9c9;
+        font-weight: 400;
+        line-height: 1.2;
+      }
+
+      &.active {
+        background-color: transparent;
+        border-bottom: 4px solid #2c89c6;
+        color: #000;
+        border-radius: 0;
+
+        .tab-number {
+          color: #2c89c6;
+        }
+
+        .tab-text {
+          color: #2c89c6;
+        }
+      }
+
+      &:hover {
+        .tab-number {
+          color: #2c89c6;
+          transition: all .4s;
+        }
+
+        .tab-text {
+          color: #2c89c6;
+          transition: all .4s;
+        }
+      }
+    }
+  }
+}
